# ch585-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  riscv-none-embed.cmake
SDK/: CMakeLists.txt  convert_code.py
SDK/BLE_LIB/: CH584BLE_ROMx.hex  CH585BLE_ROMx.hex  CH58xBLE_LIB.h  CH58xBLE_ROM.h  wchrf.h
SDK/Startup/: startup_CH585.S
SDK/StdPeriphDriver/: CH58x_adc.c  CH58x_clk.c  CH58x_flash.c  CH58x_gpio.c  CH58x_lcd.c  CH58x_pwm.c  CH58x_pwr.c  CH58x_spi0.c  CH58x_spi1.c  CH58x_sys.c  CH58x_timer0.c  CH58x_timer1.c  CH58x_timer2.c  CH58x_timer3.c  CH58x_uart0.c  CH58x_uart1.c  CH58x_uart2.c  CH58x_uart3.c  CH58x_usbdev.c  CH58x_usbhostBase.c  CH58x_usbhostClass.c
SDK/StdPeriphDriver/inc/: CH585SFR.h  CH58x_adc.h  CH58x_clk.h  CH58x_common.h  CH58x_flash.h  CH58x_gpio.h  CH58x_lcd.h  CH58x_pwm.h  CH58x_pwr.h  CH58x_spi.h  CH58x_sys.h  CH58x_timer.h  CH58x_uart.h  CH58x_usbdev.h  CH58x_usbhost.h  ISP585.h
src/: main.c
